# historic-bibletime-svn

trunk/bibletime2/: CMakeLists.txt  ChangeLog  LICENSE  build.sh  main.pro
trunk/bibletime2/data/versification/: do_import_db.sh  import_db.cpp  import_db.pro
trunk/bibletime2/data/versification/ccel/: .svnignore
trunk/bibletime2/doc/architecture/: backend.uml
trunk/bibletime2/src/: CMakeLists.txt  main.cpp  main.h
trunk/bibletime2/src/backend/: osisparser.cpp  osisparser.h
trunk/bibletime2/tests/: CMakeLists.txt
trunk/bibletime2/tests/backend/: test_osisparser.cpp  test_osisparser.h
trunk/sandbox/bibletime2-ui-concept/: bibletime2-ui-concept.ui  eelik_concept.ui  icons.qrc  jansorg-concept1.ui
trunk/sandbox/parser-test/: CMakeList.txt  CMakeLists.txt  parser.cpp  parser.pro
trunk/sandbox/schema-import/: create_schema_mapping.pl  schema-import.cpp  schema-import.pro  schema-test.cpp  schema-test.pro  xml-test.cpp  xml-test.pro
trunk/sandbox/thml2imp/: thml2imp.cpp  thml2imp.pro
trunk/website/: README  create_apache_files.pl  generate-website-en.sh  generate-website.sh  refresh-website-pages.sh  update_postats.sh  update_translation.pl
trunk/website-2.0/: bibletime-website.ipr  bibletime-website.iws  generate-apache-files.sh  generate-sitemap.sh  generate-website.sh  languages.conf  local.conf
trunk/website-2.0/content/: website-schema
trunk/website-2.0/i18n/: ar.po  bg.po  cs.po  da.po  de.po  en.pot  es.po  fi.po  fr.po  ko.po  nl.po  nn.po  pt-br.po  pt_BR.po  ro.po  ru.po  ua.po  uk.po
trunk/website-2.0/postats/: make_postats.pl  update_qt_stats.sh
trunk/website-2.0/scripts/: generate-apache-files.sh  update_postats.sh  upload.sh
trunk/website-2.0/website-common/: .htaccess  robots.txt
trunk/website/bibletime-xsl/: bibletime-footer.xsl  bibletime-head.xsl  bibletime.xsl
trunk/website/config/: language-online.conf  language.conf
trunk/website/content/: schema
trunk/website/docbook-xsl/: catalog.xml
trunk/website/website-common/: .htaccess
website/: generate-website.sh  test.pot  test.xml
website/bibletime-xsl/: bibletime-common.xsl  bibletime-toc.xsl
website/content/en/: Makefile  development_help.xml  (+11 more)
website/website-common/: .htaccess
(+313 files in other folders)
